# wc2026

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  plan.md  pyproject.toml
output/: backtest_2018.csv  backtest_2022.csv  golden_boot.csv  golden_boot_probabilities.csv
scripts/: ablation_pure_elo.py  ablation_pure_elo_sim.py  backtest.py  compare_squad_sources.py  compute_matchups.py  download_data.py  export_squads.py  export_team_meta.py  generate_eda.py  generate_report.py  golden_boot.py  simulate.py  simulate_tm.py  sweep_halflife.py  train.py
src/wc2026/: aggregate.py  backtest.py  config.py  draw.py  features.py
src/wc2026/data/: confederations.py  elo.py  goalscorers.py  matches.py  players.py  squads.py  squads_tm.py  tournament.py
web/: Dockerfile  package-lock.json
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/docs/: page.tsx
web/components/: bracket-diagram.tsx  docs-engagement.tsx  halflife-chart.tsx  home-advantage-chart.tsx  site-nav.tsx  squad-ablation-chart.tsx  squad-list.tsx  squad-source-comparison.tsx  sunburst.tsx  survival-curve.tsx  team-hover.tsx  theme-toggle.tsx  upcoming-matches.tsx
web/lib/: analytics.ts  bracket.ts  data.ts  format.ts  goldenBoot.ts  matchups.ts  schedule-data.ts  schedule.ts  squads.ts  teams-meta.ts  teams.ts  types.ts
web/public/: golden_boot.json  halflife_sweep.json  home_advantage.json  matchups.json  results.json  schedule.json  squad_ablation.json  squad_source_comparison.json  squad_source_results.json  team_meta.json
web/scripts/: build_schedule.py
(+22 files in other folders)
